--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.equipeonetech.apptest" >
-<uses-permission android:name="android.permission.INTERNET"/>
+    package="com.equipeonetech.apptest">
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -9,8 +10,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
-        <activity android:name=".GraphicScreen"></activity>
+        android:theme="@style/AppTheme">
+        <activity android:name=".AccountRegisterScreen"></activity>
+        <activity android:name=".GraphicScreen" />
         <activity android:name=".ConfigScreen" />
         <activity android:name=".CalculateScreen" />
         <activity android:name=".LoginScreen">
