--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.firebase:firebase-core:17.3.0'
     implementation 'com.google.firebase:firebase-auth:18.0.0'
+    implementation 'com.jjoe64:graphview:4.2.2'
+    implementation("com.squareup.okhttp3:okhttp:4.7.2")
 }
