--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,6 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-core:17.3.0'
     implementation 'com.google.firebase:firebase-auth:18.0.0'
-    implementation("com.squareup.okhttp3:okhttp:4.7.2")
     implementation 'com.github.AnyChart:AnyChart-Android:1.1.2'
+    implementation 'com.android.volley:volley:1.1.1'
 }
